--- a/app/src/main/res/layout/item_ticket_list.xml
+++ b/app/src/main/res/layout/item_ticket_list.xml
@@ -16,6 +16,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:checked="true"
         android:id="@+id/itemCheck"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/middleGuide"/>
