--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -22,9 +22,10 @@
         android:layout_marginBottom="8dp"
         android:background="@android:color/black"
         android:ems="10"
+        android:hint="Message"
+        android:textColorHint="@color/lightGray"
         android:inputType="textPersonName"
         android:shadowColor="@color/lightGray"
-        android:text="Message"
         android:textColor="@color/lightGray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sendMessageButton"
