--- a/app/src/main/res/layout/fragment_game_info.xml
+++ b/app/src/main/res/layout/fragment_game_info.xml
@@ -3,11 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/decksView">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/destinationDeck"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/trainDeck"/>
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/list_view_player_info"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/decksView"/>
 
 
 </android.support.constraint.ConstraintLayout>
