--- a/app/src/main/res/layout/fragment_game_info.xml
+++ b/app/src/main/res/layout/fragment_game_info.xml
@@ -3,15 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<Button
-    android:id="@+id/testButton"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-
-    <ListView
-        android:id="@+id/list_view_player_info"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/testButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <ListView
+            android:id="@+id/list_view_player_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"/>
+
+    </LinearLayout>
+
+
 
 
 </android.support.constraint.ConstraintLayout>
