--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="trainBlack">#080808</color>
     <color name="trainRed">#E80000</color>
     <color name="trainOrange">#EE8800</color>
-    <color name="trainYellow">#EEEE00</color>
+    <color name="trainYellow">#eeee00</color>
     <color name="trainGreen">#00E800</color>
     <color name="trainBlue">#0000E8</color>
     <color name="trainPurple">#D000D0</color>
