--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="lightGray">#e0e0e0</color>
+    <color name="tintFilter">#80FFFFFF</color>
     <color name="menuOne">#EE8000</color>
     <color name="menuTwo">#00EE00</color>
     <color name="menuThree">#00E0EE</color>
