Fancified activity backgrounds

--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -4,130 +4,147 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/ttrBackground"
     tools:context="activity.GameListActivity">
+
     <android.support.constraint.Guideline
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
         android:id="@+id/leftGuide"
-        app:layout_constraintGuide_percent=".05"/>
-    <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
+        app:layout_constraintGuide_percent=".05" />
+
+    <android.support.constraint.Guideline
         android:id="@+id/rightGuide"
-        app:layout_constraintGuide_percent=".95"/>
-    <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".95" />
+
+    <android.support.constraint.Guideline
         android:id="@+id/topGuide"
-        app:layout_constraintGuide_percent=".15"/>
-    <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".15" />
+
+    <android.support.constraint.Guideline
         android:id="@+id/bottomGuide"
-        app:layout_constraintGuide_percent=".75"/>
-    <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".75" />
+
+    <android.support.constraint.Guideline
         android:id="@+id/topBarGuide"
-        app:layout_constraintGuide_percent=".225"/>
-    <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".225" />
+
+    <android.support.constraint.Guideline
         android:id="@+id/menuOne"
-        app:layout_constraintGuide_percent=".25"/>
-    <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
+        app:layout_constraintGuide_percent=".25" />
+
+    <android.support.constraint.Guideline
         android:id="@+id/menuTwo"
-        app:layout_constraintGuide_percent=".8"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".8" />
+
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/join_game"
         android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="@id/leftGuide"
+        app:layout_constraintBottom_toTopOf="@id/topBarGuide"
         app:layout_constraintEnd_toEndOf="@id/rightGuide"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/topBarGuide"/>
+        app:layout_constraintStart_toStartOf="@id/leftGuide"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/lightGray"
         app:layout_constraintBottom_toTopOf="@id/bottomGuide"
-        app:layout_constraintTop_toBottomOf="@id/topGuide"
         app:layout_constraintEnd_toStartOf="@id/rightGuide"
-        app:layout_constraintStart_toEndOf="@id/leftGuide"/>
+        app:layout_constraintStart_toEndOf="@id/leftGuide"
+        app:layout_constraintTop_toBottomOf="@id/topGuide" />
+
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/menuOne"
         android:text="@string/game_name"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/topGuide"
         app:layout_constraintBottom_toTopOf="@id/topBarGuide"
         app:layout_constraintEnd_toStartOf="@id/menuOne"
-        app:layout_constraintStart_toEndOf="@id/leftGuide"/>
+        app:layout_constraintStart_toEndOf="@id/leftGuide"
+        app:layout_constraintTop_toBottomOf="@id/topGuide" />
+
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/menuTwo"
-        android:textAlignment="center"
         android:text="@string/game_players"
-        app:layout_constraintTop_toBottomOf="@id/topGuide"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@id/topBarGuide"
         app:layout_constraintEnd_toStartOf="@id/menuTwo"
-        app:layout_constraintStart_toEndOf="@id/menuOne"/>
+        app:layout_constraintStart_toEndOf="@id/menuOne"
+        app:layout_constraintTop_toBottomOf="@id/topGuide" />
+
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/menuThree"
         android:text="@string/spots_left"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/topGuide"
         app:layout_constraintBottom_toTopOf="@id/topBarGuide"
         app:layout_constraintEnd_toStartOf="@id/rightGuide"
-        app:layout_constraintStart_toEndOf="@id/menuTwo"/>
+        app:layout_constraintStart_toEndOf="@id/menuTwo"
+        app:layout_constraintTop_toBottomOf="@id/topGuide" />
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/gameList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/gameList"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/topBarGuide"
         app:layout_constraintBottom_toTopOf="@id/bottomGuide"
+        app:layout_constraintEnd_toStartOf="@id/rightGuide"
         app:layout_constraintStart_toEndOf="@id/leftGuide"
-        app:layout_constraintEnd_toStartOf="@id/rightGuide"/>
+        app:layout_constraintTop_toBottomOf="@id/topBarGuide" />
+
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/gameName"
-        android:inputType="text"
-        android:hint="@string/game_name"
-        app:layout_constraintEnd_toStartOf="@id/numPlayers"
-        app:layout_constraintTop_toBottomOf="@id/bottomGuide"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-    <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:hint="@string/game_name"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/numPlayers"
+        app:layout_constraintTop_toBottomOf="@id/bottomGuide" />
+
+    <Spinner
         android:id="@+id/numPlayers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/menuTwo"
         app:layout_constraintStart_toEndOf="@id/menuOne"
-        app:layout_constraintTop_toBottomOf="@id/bottomGuide"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/bottomGuide" />
+
     <Button
+        android:id="@+id/createGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/createGame"
-        android:text="@string/create_game"
         android:enabled="false"
+        android:text="@string/create_game"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/numPlayers"
-        app:layout_constraintTop_toBottomOf="@id/bottomGuide"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/bottomGuide" />
 
 </android.support.constraint.ConstraintLayout>
