--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,11 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/ttrBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ttr_background"
-    android:backgroundTint="@color/tintFilter"
-    android:backgroundTintMode="src_over"
     tools:context="activity.LoginActivity">
 
     <android.support.constraint.Guideline
@@ -24,7 +22,6 @@
         app:layout_constraintGuide_percent=".7" />
 
     <LinearLayout
-        style="@style/overlayBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/registerLayout"
