--- a/app/src/main/res/layout/activity_game_lobby.xml
+++ b/app/src/main/res/layout/activity_game_lobby.xml
@@ -49,6 +49,7 @@
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/overlayBox"
             android:id="@+id/colorSpinner"/>
         <Button
             android:layout_width="wrap_content"
