--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -69,7 +69,6 @@
     <View
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/lightGray"
         app:layout_constraintBottom_toTopOf="@id/bottomGuide"
         app:layout_constraintEnd_toStartOf="@id/rightGuide"
         app:layout_constraintStart_toEndOf="@id/leftGuide"
@@ -110,6 +109,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gameList"
+        style="@style/overlayBox"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
@@ -120,6 +120,7 @@
 
     <EditText
         android:id="@+id/gameName"
+        style="@style/overlayBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/game_name"
