--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/username"
+            style="@style/overlaidItem"
             android:inputType="text" />
 
         <EditText
@@ -66,6 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/password"
+            style="@style/overlaidItem"
             android:inputType="textPassword" />
 
         <Button
@@ -91,6 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/username"
+            style="@style/overlaidItem"
             android:inputType="text" />
 
         <EditText
@@ -98,6 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/password"
+            style="@style/overlaidItem"
             android:inputType="textPassword" />
 
         <EditText
@@ -105,6 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/confirm"
+            style="@style/overlaidItem"
             android:inputType="text" />
 
         <Button
