--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,11 @@
         <item name="android:background">#55000000</item>
         <item name="android:padding">4dp</item>
         <item name="android:layout_margin">4dp</item>
+        <item name="android:textColor">@color/lightGray</item>
+    </style>
+
+    <style name="overlaidItem">
+        <item name="android:textColor">@color/lightGray</item>
     </style>
 
     <style name="ttrBackground">
